--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -9,12 +9,12 @@
   # Variable: variables that will apply to the play, on all target systems
   vars: 
 
-  # Task: the list of tasks that will be executed within the playbook
+  # Task: the list of tasks that will be executed witin the playbook
   tasks:
     - name: Stop Service Task
       win_service:
-        name: BITS
-        state: stopped
+       name: BITS
+       state: stopped
         
       
             
