--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -10,10 +10,12 @@
   vars: 
 
   # Task: the list of tasks that will be executed witin the playbook
+  vars_files:
+    - EXT_variable.yml
   tasks:
    - name: Start service BITS, if not started
      win_service:
-      name: BITS
+      name: "{{servicesneedstodisable}}"
       state: Stopped
         
       
