--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -15,8 +15,10 @@
   tasks:
    - name: Start service BITS, if not started
      win_service:
-      name: "{{servicesneedstodisable}}"
+      name: "{{item}}"
       state: Stopped
+     loop:
+      "{{servicesneedstodisable}}"   
         
       
             
