--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -16,7 +16,7 @@
    - name: Start service BITS, if not started
      win_service:
       name: "{{item}}"
-      state: Stopped
+      state: Started
      loop:
       "{{servicesneedstodisable}}"   
         
