--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -13,21 +13,20 @@
   vars_files:
     - Ext_variable.yml
   tasks:
-   - name: Start service BITS,if not started
-     win_service:
-      name: "{{item}}"
-      state: >  
-          "{{% for Serv in "{{servicesneedstodisable}}" -%}}"  
-            {% if Serv == "BITS" -%}
-             stopped
-            {% elif Serv == "Windows Audio" -%}
-             started
-            {% else Serv == "Dnscache" -%}
-             started
-            {% endif -%}
-          {% endfor -%}
-     loop:
-         "{{servicesneedstodisable}}"
+    - name: Start service BITS,if not started
+      win_service:
+       name: "{{item}}"
+       state: >  
+              {% for Serv in "{{servicesneedstodisable}}" -%}  
+                 {% if Serv == "BITS" -%}
+                   stopped
+                 {% elif Serv == "Windows Audio" -%}
+                    started
+                 {% else Serv == "Dnscache" -%}
+                    started
+                 {% endif %}
+              {% endfor -%}
+      loop: "{{servicesneedstodisable}}"
         
       
             
