--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -17,15 +17,15 @@
       win_service:
        name: "{{item}}"
        state: >  
-              {% for Serv in "{{servicesneedstodisable}}" -%}  
-                 {% if Serv == "BITS" -%}
+              {% for Serv in "{{servicesneedstodisable}}" %}  
+                 {% if Serv == "BITS" %}
                    stopped
-                 {% elif Serv == "Windows Audio" -%}
+                 {% elif Serv == "Windows Audio" %}
                     started
-                 {% else Serv == "Dnscache" -%}
+                 {% else Serv == "Dnscache" %}
                     started
                  {% endif %}
-              {% endfor -%}
+              {% endfor %}
       loop: "{{servicesneedstodisable}}"
         
       
