--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -14,20 +14,16 @@
     - Ext_variable.yml
   tasks:
     - name: Start service BITS,if not started
-      debug:
-        msg: >
       win_service:
        name: "{{item}}"
-       state:   
-              {% for Serv in "{{servicesneedstodisable}}" %}  
-                 {% if Serv == "BITS" %}
+       state: > 
+                 {% if "{{item}}" == "BITS" -%}
                    stopped
-                 {% elif Serv == "Windows Audio" %}
+                 {% elif "{{item}}" == "Windows Audio" -%}
                     started
-                 {% else Serv == "Dnscache" %}
+                 {% else "{{item}}" == "Dnscache" -%}
                     started
                  {% endif %}
-              {% endfor %}
       loop: "{{servicesneedstodisable}}"
         
       
