--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -21,8 +21,10 @@
                    stopped
                  {% elif "{{item}}" == "Windows Audio" -%}
                     started
-                 {% else "{{item}}" == "Dnscache" -%}
+                 {% elif "{{item}}" == "Dnscache" -%}
                     started
+                 {% else -%}
+                   Service Not Found 
                  {% endif %}
       loop: "{{servicesneedstodisable}}"
         
