--- a/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
+++ b/ii-Concepts/03-playbook/setupmodule/ServiceTask.yml
@@ -24,7 +24,7 @@
                  {% elif "{{item}}" == "Dnscache" -%}
                     started
                  {% else -%}
-                   Service Not Found 
+                    absent
                  {% endif %}
       loop: "{{servicesneedstodisable}}"
         
