--- a/ii-Concepts/when.yml
+++ b/ii-Concepts/when.yml
@@ -9,6 +9,7 @@
       register: hostnamevar
     
     - name: Show output
-      debug:
-        var: hostnamevar
-      when: hostnamevar.state == running     
+      win_service: 
+       debug:
+         var: hostnamevar
+       when: hostnamevar.state == running     
