--- a/ii-Concepts/when.yml
+++ b/ii-Concepts/when.yml
@@ -10,5 +10,4 @@
     
     - name: Show output
       debug: 
-         var: hostnamevar
-      "{{hostnamevar.status | from_json }}"   
+         var: "{{hostnamevar.status | from_json }}"
