--- a/ii-Concepts/when.yml
+++ b/ii-Concepts/when.yml
@@ -11,4 +11,4 @@
     - name: Show output
       debug: 
          var: "{{hostnamevar.name | from_json }}"
-      when: hostnamevar == running 
+      when: hostnamevar.status == running 
